# wschirp

./: CMakeLists.txt  README.md
src/: filter_main.cpp  main.cpp  nbline.cpp
